--- a/Codes/Arbitrary/upen_csv_wildtype.ipynb
+++ b/Codes/Arbitrary/upen_csv_wildtype.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
        "[671 rows x 10 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "671"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,28 +271,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['Not Available', 'Unmethylated', 'Indeterminate', 'Methylated'],\n",
-       "      dtype=object)"
+       "array(['Wildtype', 'NOS/NEC', 'Mutated'], dtype=object)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.MGMT.unique()"
+    "df.IDH1.unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +331,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1367,7 +1366,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1.to_csv('upen_patient.csv')"
+    "df1.to_csv('upen_patient_mutated.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mutated UPENN-GBM-00287_11\n",
+      "Mutated UPENN-GBM-00444_11\n",
+      "Mutated UPENN-GBM-00553_11\n",
+      "Mutated UPENN-GBM-00557_11\n",
+      "Mutated UPENN-GBM-00564_11\n",
+      "Mutated UPENN-GBM-00569_11\n",
+      "Mutated UPENN-GBM-00592_11\n",
+      "Mutated UPENN-GBM-00612_21\n",
+      "Mutated UPENN-GBM-00618_21\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/_r/0nrgl50n1ln9bwhj847f2gy00000gn/T/ipykernel_7626/1754968060.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df1= df1.append(df2)\n",
+      "/var/folders/_r/0nrgl50n1ln9bwhj847f2gy00000gn/T/ipykernel_7626/1754968060.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df1= df1.append(df2)\n",
+      "/var/folders/_r/0nrgl50n1ln9bwhj847f2gy00000gn/T/ipykernel_7626/1754968060.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df1= df1.append(df2)\n",
+      "/var/folders/_r/0nrgl50n1ln9bwhj847f2gy00000gn/T/ipykernel_7626/1754968060.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df1= df1.append(df2)\n",
+      "/var/folders/_r/0nrgl50n1ln9bwhj847f2gy00000gn/T/ipykernel_7626/1754968060.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df1= df1.append(df2)\n",
+      "/var/folders/_r/0nrgl50n1ln9bwhj847f2gy00000gn/T/ipykernel_7626/1754968060.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df1= df1.append(df2)\n",
+      "/var/folders/_r/0nrgl50n1ln9bwhj847f2gy00000gn/T/ipykernel_7626/1754968060.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df1= df1.append(df2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(df)):\n",
+    "   \n",
+    "    if df.IDH1[i] == 'Mutated' and (df.MGMT[i] == 'Unmethylated' or df.MGMT[i] == 'Methylated'):\n",
+    "        \n",
+    "        l=0\n",
+    "        \n",
+    "        if df.MGMT[i] == 'Unmethylated':\n",
+    "            pass\n",
+    "        else:\n",
+    "            l=1\n",
+    "        print(df.IDH1[i], df.ID[i])\n",
+    "        df2 = pd.DataFrame({'id': [df.ID[i]], 'idh1': [df.IDH1[i]],\n",
+    "                           'mgmt': [l] })\n",
+    "        df1= df1.append(df2)"
    ]
   }
  ],
