--- a/Codes/Step 1 - mgmt data preparation.ipynb
+++ b/Codes/Step 1 - mgmt data preparation.ipynb
@@ -84,7 +84,7 @@
     "# 4. Getting range of layer numbers, from where segmentation data is relevant\n",
     "# 5. Creating new mask to be later multiplied with segmentation data\n",
     "# 6. Again checking for zero value layers and removing them\n",
-    "# 7. Converting the np array back to jpeg Generate_images\n",
+    "# 7. Converting the np array back to png Generate_images\n",
     "# 8. Resizing the mask data then resizing them (32,32)\n",
     "# 9. Deleting the nii files to save storage\n",
     "\n",
@@ -163,7 +163,7 @@
     "                            im = im.resize((height, 32))\n",
     "                        elif(height < 32 and width < 32):\n",
     "                            im = im.resize((32,32))\n",
-    "                        im.save(\"{}_img_{}.png\".format(patient,frame))\n",
+    "                        im.save(\"{}_img_{}.jpeg\".format(patient,frame))\n",
     "                        im.close()\n",
     "\n",
     "                #Removing unwanted nii files\n",
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "3d39eb94",
    "metadata": {
     "scrolled": true
@@ -257,7 +257,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating Backup\n",
       "Generating Images\n",
       "Removed .DS_Store from directory list\n",
       "Work Directory:  ['MGMT_positive', 'MGMT_negative']\n",
@@ -285,7 +284,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2/2 [00:05<00:00,  2.54s/it]\n"
+      "100%|██████████| 2/2 [00:00<00:00, 1319.17it/s]\n"
      ]
     }
    ],
