--- a/Codes/Task.ipynb
+++ b/Codes/Task.ipynb
@@ -31,6 +31,16 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/vitthal/miniforge3/lib/python3.10/site-packages/scipy/__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.23.2\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n",
+      "2022-09-05 17:21:56.995088: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:305] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
+      "2022-09-05 17:21:56.995166: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:271] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -39,14 +49,6 @@
       "systemMemory: 16.00 GB\n",
       "maxCacheSize: 5.33 GB\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-09-02 12:37:37.096795: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:305] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
-      "2022-09-02 12:37:37.096900: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:271] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
      ]
     }
    ],
@@ -94,14 +96,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "id": "zEtg_MizwDk2"
    },
    "outputs": [],
    "source": [
     "def Generate_Weighted_Matrix():\n",
-    "    import tqdm\n",
     "    import pickle\n",
     "    taskdir= os.listdir(Task_data)\n",
     "    if '.DS_Store' in taskdir:\n",
@@ -136,6 +137,9 @@
     "            #print(num_layers)\n",
     "            arr = np.zeros((240,240,num_layers))\n",
     "            layer_num = 0\n",
+    "\n",
+    "            # Select the layer with maximum pixels\n",
+    "\n",
     "            \n",
     "            #Finding indices of cancer pixels using mask data\n",
     "            for layer in nonzero_layer_indices:\n",
@@ -170,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
