--- a/Codes/Step 2 - mgmt data preprocessing.ipynb
+++ b/Codes/Step 2 - mgmt data preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "136633d8",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "40d15bad",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "7724eb80",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,6 @@
     "        print(categorydir)\n",
     "        if '.DS_Store' in categorydir:\n",
     "            categorydir.remove('.DS_Store')\n",
-    "        # categorydir.remove('.DS_Store')\n",
     "        print(categorydir)\n",
     "        for patient in categorydir:\n",
     "            Patient_Path = os.path.join(Category_Path, patient + '/')\n",
@@ -72,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "21a02cb5",
    "metadata": {},
    "outputs": [],
@@ -89,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "c4afa161",
    "metadata": {},
    "outputs": [],
@@ -100,7 +99,7 @@
     "    import numpy as np  # Used for array operations.\n",
     "    global X, y\n",
     "    \n",
-    "    X = np.array(X).reshape(-1, block_h, block_w, 1)  # -1 is added to solve dimension mismatch while converting list to an array.\n",
+    "    X = np.array(X).reshape((-1, block_h, block_w, 1))  # -1 is added to solve dimension mismatch while converting list to an array.\n",
     "    y = np.array(y)\n",
     "    \n",
     "    print('Array Size with Reshape: ', len(X), len(y))\n",
@@ -109,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "e7bf7462",
    "metadata": {},
    "outputs": [],
@@ -139,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "20823e14",
    "metadata": {},
    "outputs": [],
@@ -177,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "id": "1450e7e2",
    "metadata": {},
    "outputs": [
@@ -185,19 +184,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Data/Working_Data/MGMT_positive/\n",
-      "0\n",
-      "['BraTS2021_00005', 'BraTS2021_00002', '.DS_Store', 'BraTS2021_00000', 'BraTS2021_00006', 'BraTS2021_00008']\n",
-      "['BraTS2021_00005', 'BraTS2021_00002', 'BraTS2021_00000', 'BraTS2021_00006', 'BraTS2021_00008']\n",
-      "/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Data/Working_Data/MGMT_negative/\n",
-      "1\n",
-      "['BraTS2021_00003', '.DS_Store', 'BraTS2021_00018', 'BraTS2021_00019', 'BraTS2021_00017', 'BraTS2021_00009']\n",
-      "['BraTS2021_00003', 'BraTS2021_00018', 'BraTS2021_00019', 'BraTS2021_00017', 'BraTS2021_00009']\n",
-      "Length of the total data: 40184\n",
-      "1 0 1 0 1 1 0 1 1 1 1 0 0 0 1 0 1 1 0 0 0 0 0 1 0 1 1 0 1 0 0 1 1 0 0 0 0 1 0 0 1 1 0 0 1 1 0 0 1 1 List Size:  40184 40184\n",
-      "Array Size with Reshape:  40184 40184\n",
-      "Array Shape with Reshape:  (40184, 32, 32, 1) (40184,)\n",
-      "Done..!!\n"
+      "Length of the total data: 0\n",
+      "List Size:  0 0\n",
+      "Array Size with Reshape:  0 0\n",
+      "Array Shape with Reshape:  (0, 32, 32, 1) (0,)\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Cannot have number of splits n_splits=5 greater than the number of samples: n_samples=0.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Codes/Step 2 - mgmt data preprocessing.ipynb Cell 8'\u001b[0m in \u001b[0;36m<cell line: 38>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Codes/Step%202%20-%20mgmt%20data%20preprocessing.ipynb#ch0000007?line=35'>36</a>\u001b[0m \u001b[39m# Function Call --> Dividing Datasets into number of cases for Cross Validation\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Codes/Step%202%20-%20mgmt%20data%20preprocessing.ipynb#ch0000007?line=36'>37</a>\u001b[0m CASES \u001b[39m=\u001b[39m []\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Codes/Step%202%20-%20mgmt%20data%20preprocessing.ipynb#ch0000007?line=37'>38</a>\u001b[0m Creating_Cases(Case_Num)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Codes/Step%202%20-%20mgmt%20data%20preprocessing.ipynb#ch0000007?line=39'>40</a>\u001b[0m os\u001b[39m.\u001b[39mchdir(PATH)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Codes/Step%202%20-%20mgmt%20data%20preprocessing.ipynb#ch0000007?line=40'>41</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mDone..!!\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;32m/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Codes/Step 2 - mgmt data preprocessing.ipynb Cell 7'\u001b[0m in \u001b[0;36mCreating_Cases\u001b[0;34m(Case_Num)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Codes/Step%202%20-%20mgmt%20data%20preprocessing.ipynb#ch0000006?line=18'>19</a>\u001b[0m kf \u001b[39m=\u001b[39m KFold(n_splits\u001b[39m=\u001b[39m\u001b[39m5\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Codes/Step%202%20-%20mgmt%20data%20preprocessing.ipynb#ch0000006?line=19'>20</a>\u001b[0m case_number \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Codes/Step%202%20-%20mgmt%20data%20preprocessing.ipynb#ch0000006?line=20'>21</a>\u001b[0m \u001b[39mfor\u001b[39;00m train_index, test_index \u001b[39min\u001b[39;00m kf\u001b[39m.\u001b[39msplit(X):\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Codes/Step%202%20-%20mgmt%20data%20preprocessing.ipynb#ch0000006?line=21'>22</a>\u001b[0m     \n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Codes/Step%202%20-%20mgmt%20data%20preprocessing.ipynb#ch0000006?line=22'>23</a>\u001b[0m     \u001b[39m#print(\"TRAIN:\", train_index, \"TEST:\", test_index)\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Codes/Step%202%20-%20mgmt%20data%20preprocessing.ipynb#ch0000006?line=23'>24</a>\u001b[0m     X_train, X_test \u001b[39m=\u001b[39m X[train_index], X[test_index]\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Codes/Step%202%20-%20mgmt%20data%20preprocessing.ipynb#ch0000006?line=24'>25</a>\u001b[0m     y_train, y_test \u001b[39m=\u001b[39m y[train_index], y[test_index]\n",
+      "File \u001b[0;32m~/Library/Python/3.8/lib/python/site-packages/sklearn/model_selection/_split.py:333\u001b[0m, in \u001b[0;36m_BaseKFold.split\u001b[0;34m(self, X, y, groups)\u001b[0m\n\u001b[1;32m    <a href='file:///Users/vitthal/Library/Python/3.8/lib/python/site-packages/sklearn/model_selection/_split.py?line=330'>331</a>\u001b[0m n_samples \u001b[39m=\u001b[39m _num_samples(X)\n\u001b[1;32m    <a href='file:///Users/vitthal/Library/Python/3.8/lib/python/site-packages/sklearn/model_selection/_split.py?line=331'>332</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn_splits \u001b[39m>\u001b[39m n_samples:\n\u001b[0;32m--> <a href='file:///Users/vitthal/Library/Python/3.8/lib/python/site-packages/sklearn/model_selection/_split.py?line=332'>333</a>\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    <a href='file:///Users/vitthal/Library/Python/3.8/lib/python/site-packages/sklearn/model_selection/_split.py?line=333'>334</a>\u001b[0m         (\n\u001b[1;32m    <a href='file:///Users/vitthal/Library/Python/3.8/lib/python/site-packages/sklearn/model_selection/_split.py?line=334'>335</a>\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mCannot have number of splits n_splits=\u001b[39m\u001b[39m{0}\u001b[39;00m\u001b[39m greater\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    <a href='file:///Users/vitthal/Library/Python/3.8/lib/python/site-packages/sklearn/model_selection/_split.py?line=335'>336</a>\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39m than the number of samples: n_samples=\u001b[39m\u001b[39m{1}\u001b[39;00m\u001b[39m.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    <a href='file:///Users/vitthal/Library/Python/3.8/lib/python/site-packages/sklearn/model_selection/_split.py?line=336'>337</a>\u001b[0m         )\u001b[39m.\u001b[39mformat(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn_splits, n_samples)\n\u001b[1;32m    <a href='file:///Users/vitthal/Library/Python/3.8/lib/python/site-packages/sklearn/model_selection/_split.py?line=337'>338</a>\u001b[0m     )\n\u001b[1;32m    <a href='file:///Users/vitthal/Library/Python/3.8/lib/python/site-packages/sklearn/model_selection/_split.py?line=339'>340</a>\u001b[0m \u001b[39mfor\u001b[39;00m train, test \u001b[39min\u001b[39;00m \u001b[39msuper\u001b[39m()\u001b[39m.\u001b[39msplit(X, y, groups):\n\u001b[1;32m    <a href='file:///Users/vitthal/Library/Python/3.8/lib/python/site-packages/sklearn/model_selection/_split.py?line=340'>341</a>\u001b[0m     \u001b[39myield\u001b[39;00m train, test\n",
+      "\u001b[0;31mValueError\u001b[0m: Cannot have number of splits n_splits=5 greater than the number of samples: n_samples=0."
      ]
     }
    ],
