--- a/Codes/Step 1 - mgmt data preparation.ipynb
+++ b/Codes/Step 1 - mgmt data preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "id": "7060655a",
    "metadata": {
     "scrolled": true
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "id": "88563e46",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "id": "bee6c5d9",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "id": "f119c182",
    "metadata": {},
    "outputs": [],
@@ -110,9 +110,10 @@
     "                print('Resolving patient number {}'.format(patient))\n",
     "                Patient_Path = os.path.join(Type_Path, patient + '/')\n",
     "                os.chdir(Patient_Path)\n",
-    "                flair = nib.load('{}_flair.nii.gz'.format(patient))\n",
+    "                flair = nib.load('{}_FLAIR.nii.gz'.format(patient))\n",
     "                flair_data = flair.get_fdata() #Converting nii to 3d np array\n",
-    "                seg_mask = nib.load('{}_seg.nii.gz'.format(patient))\n",
+    "                seg_mask = nib.load(\n",
+    "                    '{}_automated_approx_segm.nii.gz'.format(patient))\n",
     "                seg_mask_data = seg_mask.get_fdata() #Converting nii to 3d np array\n",
     "\n",
     "                #Extracting only those layers from mask hich have non zero values\n",
@@ -184,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "id": "1472bf2a",
    "metadata": {},
    "outputs": [],
@@ -247,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "id": "3d39eb94",
    "metadata": {
     "scrolled": true
@@ -257,34 +258,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Creating Backup\n",
       "Generating Images\n",
       "Removed .DS_Store from directory list\n",
-      "Work Directory:  ['MGMT_positive', 'MGMT_negative']\n",
-      "Type_Path:  /Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Data/Working_Data/MGMT_positive/\n",
+      "Work Directory:  ['MGMT_positive ', 'MGMT_negative']\n",
+      "Type_Path:  /Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Data/UPENN/Working_Data/MGMT_positive /\n",
       "Removed .DS_Store\n",
-      "Type_Path Directory:  ['BraTS2021_00005', 'BraTS2021_00002', 'BraTS2021_00000', 'BraTS2021_00006', 'BraTS2021_00008']\n",
-      "Resolving patient number BraTS2021_00005\n",
-      "Resolving patient number BraTS2021_00002\n",
-      "Resolving patient number BraTS2021_00000\n",
-      "Resolving patient number BraTS2021_00006\n",
-      "Resolving patient number BraTS2021_00008\n",
-      "Type_Path:  /Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Data/Working_Data/MGMT_negative/\n",
+      "Type_Path Directory:  ['UPENN-GBM-00095_11', 'UPENN-GBM-00128_11', 'UPENN-GBM-00098_11', 'UPENN-GBM-00124_11', 'UPENN-GBM-00115_11']\n",
+      "Resolving patient number UPENN-GBM-00095_11\n",
+      "Resolving patient number UPENN-GBM-00128_11\n",
+      "Resolving patient number UPENN-GBM-00098_11\n",
+      "Resolving patient number UPENN-GBM-00124_11\n",
+      "Resolving patient number UPENN-GBM-00115_11\n",
+      "Type_Path:  /Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Data/UPENN/Working_Data/MGMT_negative/\n",
       "Removed .DS_Store\n",
-      "Type_Path Directory:  ['BraTS2021_00003', 'BraTS2021_00018', 'BraTS2021_00019', 'BraTS2021_00017', 'BraTS2021_00009']\n",
-      "Resolving patient number BraTS2021_00003\n",
-      "Resolving patient number BraTS2021_00018\n",
-      "Resolving patient number BraTS2021_00019\n",
-      "Resolving patient number BraTS2021_00017\n",
-      "Resolving patient number BraTS2021_00009\n",
+      "Type_Path Directory:  ['UPENN-GBM-00091_11', 'UPENN-GBM-00022_11', 'UPENN-GBM-00088_11', 'UPENN-GBM-00092_11', 'UPENN-GBM-00034_11']\n",
+      "Resolving patient number UPENN-GBM-00091_11\n",
+      "Removed .DS_Store from osList\n",
+      "Resolving patient number UPENN-GBM-00022_11\n",
+      "Resolving patient number UPENN-GBM-00088_11\n",
+      "Removed .DS_Store from osList\n",
+      "Resolving patient number UPENN-GBM-00092_11\n",
+      "Resolving patient number UPENN-GBM-00034_11\n",
       "Removed .DS_Store\n",
-      "OS DIRECTORY:  ['MGMT_positive', 'MGMT_negative']\n"
+      "OS DIRECTORY:  ['MGMT_positive ', 'MGMT_negative']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2/2 [00:00<00:00, 1319.17it/s]\n"
+      "100%|██████████| 2/2 [00:04<00:00,  2.12s/it]\n"
      ]
     }
    ],
@@ -295,7 +299,7 @@
     "import nibabel as nib\n",
     "from PIL import Image\n",
     "\n",
-    "PATH = path + 'Data/'\n",
+    "PATH = path + 'Data/UPENN/'\n",
     "Org_Dir = PATH + 'Original_Data_Backup/'\n",
     "Work_Dir = PATH + 'Working_Data/'\n",
     "\n",
