--- a/Codes/data_sorting.ipynb
+++ b/Codes/data_sorting.ipynb
@@ -1915,7 +1915,22 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "for i in range(len(df)):\n",
+    "   \n",
+    "    if df.IDH1[i] == 'Mutated' and (df.MGMT[i] == 'Unmethylated' or df.MGMT[i] == 'Methylated'):\n",
+    "        \n",
+    "        l=0\n",
+    "        \n",
+    "        if df.MGMT[i] == 'Unmethylated':\n",
+    "            pass\n",
+    "        else:\n",
+    "            l=1\n",
+    "        print(df.IDH1[i], df.ID[i])\n",
+    "        df2 = pd.DataFrame({'id': [df.ID[i]], 'idh1': [df.IDH1[i]],\n",
+    "                           'mgmt': [l] })\n",
+    "        df1= df1.append(df2)"
+   ]
   }
  ],
  "metadata": {
